--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700"
     />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.svg">
     <style>
       body {
         font-family: "Source Sans 3", sans-serif;
