--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         font-family: "Source Sans 3", sans-serif;
       }
     </style>
+    <title>Feedback</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
