List all Xero office locations

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     var isCurrentlySubmitting = false;
     
     var locationScreen = locationSelection(
-      ["Auckland", "Wellington", "Melbourne"],
+      ['Brisbane, AU', 'Canberra, AU', 'Melbourne, AU', 'Perth, AU', 'Sydney, AU', 'Toronto, CA', 'Hong Kong, HK', 'Auckland, NZ', 'Napier, NZ', 'Wellington, NZ', 'Cape Town, SA', 'Singapore, SG', 'London, UK', 'Manchester, UK', 'Milton Keynes, UK', 'Denver, USA', 'New York, USA', 'San Francisco, USA'],
       "bg-sky-100"
     );
     
